postgres/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: earney
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      # this is not inteneded to stay this way. there are issues using hostPath with k3s to provision
      # volumes, so temporarily, this service has full rw access to the volume mounted under the name data
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: postgres
          image: bitnami/postgresql
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: postgres-creds
          secret:
            secretName: postgres-creds
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: earney
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: postgres
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgres
# ---
# # to be used after the postgres namespace is setup and can handle connection from every namespace
# kind: Service
# apiVersion: v1
# metadata:
#   name: postgres
#   namespace: postgres
# spec:
#   type: ExternalName
#   externalName: postgres.postgres.svc.cluster.local
#   ports:
#   - port: 80
